--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "el-castillo-ct-v2",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Pagina SSR de El Castillo Centro Textil",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js"
   },
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "autocompleter": "^6.1.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
